# codexmcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/test-codexmcp/: SKILL.md
docs/: README_EN.md
examples/: test-cases.md
scripts/: phase0_verify.py  test_phase1_status.py  verify_native_binary.py
src/codexmcp/: __init__.py  bridge.py  cli.py  collector.py  compat.py  errors.py  models.py  output.py  process.py  recorder.py  server.py
tests/: conftest.py  test_collector.py  test_mcp_serialization.py  test_output_projection.py  test_server_integration.py
