[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codexmcp"
version = "2.0.0"
description = "FastMCP server bridging Claude Code and Codex App Server v2 API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]
authors = [
    { name = "phaseddd", email = "phaseddd@users.noreply.github.com" },
]
license = { text = "MIT" }
keywords = ["mcp", "fastmcp", "codex"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/phaseddd/codexmcp"

[project.scripts]
codexmcp = "codexmcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codexmcp"]

[tool.hatch.build.targets.sdist]
include = ["src/codexmcp", "README.md", "LICENSE"]
